--- a/arch/arm/configs/cm_blue_tsubasa_defconfig
+++ b/arch/arm/configs/cm_blue_tsubasa_defconfig
@@ -43,7 +43,7 @@ CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
-CONFIG_MACH_VISKAN_HUASHAN=y
+CONFIG_MACH_BLUE_TSUBASA=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 # CONFIG_MSM_FIQ_SUPPORT is not set
 # CONFIG_MSM_PROC_COMM is not set
@@ -77,11 +77,11 @@ CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED=y
 CONFIG_MSM_WATCHDOG=y
 CONFIG_MSM_DLOAD_MODE=y
-CONFIG_MSM_JTAG=y
-CONFIG_CODEC_MICBIAS_WITH_CAPACITANCE=y
+CONFIG_PM8921_MIC_BIAS=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
 CONFIG_MSM_EBI_ERP=y
+CONFIG_SIMPLE_REMOTE_INVERT_PLUG_DETECTION_STATE=y
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
 CONFIG_MSM_L1_RECOV_ERR_PANIC=y
@@ -90,6 +90,7 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 CONFIG_MSM_DCVS=y
 CONFIG_RTC_SEMC_ETS=y
 CONFIG_MSM_HSIC_SYSMON=y
+CONFIG_MMC_MSM_POWER_SUPPLY_SDC3_VIA_MPP04=y
 CONFIG_HAS_MACH_MEMUTILS=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -287,12 +288,14 @@ CONFIG_ZRAM=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_UID_CPUTIME=y
 CONFIG_UID_STAT=y
-CONFIG_HAPTIC_ISA1200=y
 CONFIG_PMIC8XXX_VIBRATOR=y
-CONFIG_LM3561=y
+CONFIG_LM3560_FLASHLED=y
 CONFIG_QSEECOM=y
 CONFIG_NFC_PN544=y
 CONFIG_USB_HSIC_SMSC_HUB=y
+CONFIG_SENSORS_MPU3050=y
+CONFIG_SENSORS_BMA250=y
+CONFIG_SENSORS_AKM8972=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
@@ -331,7 +334,6 @@ CONFIG_USB_USBNET=y
 CONFIG_MSM_RMNET_USB=y
 CONFIG_WCNSS_CORE=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
-# CONFIG_INPUT_MOUSEDEV is not set
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
 CONFIG_KEYBOARD_GPIO=y
@@ -354,12 +356,11 @@ CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
-CONFIG_INPUT_LSM303DLHC_ACCELEROMETER_LT=y
 CONFIG_STM_LIS3DH=y
 CONFIG_INPUT_APDS9702=y
-CONFIG_INPUT_L3GD20=y
-CONFIG_INPUT_AKM8963=y
-CONFIG_INPUT_MBHC_HEADSET_CONTROL=y
+CONFIG_INPUT_AKM8972=y
+CONFIG_INPUT_BMA250_NG=y
+CONFIG_INPUT_SIMPLE_REMOTE=y
 # CONFIG_LEGACY_PTYS is not set
 CONFIG_N_SMUX=y
 CONFIG_N_SMUX_LOOPBACK=y
@@ -454,10 +455,9 @@ CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
 CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
-CONFIG_FB_MSM_MIPI_R63306_PANEL_SHARP_LS046K3SY01=y
-CONFIG_FB_MSM_MIPI_R63306_PANEL_SHARP_LS043K3SX01=y
+CONFIG_FB_MSM_PANEL_ECO_MODE=y
 CONFIG_FB_MSM_MIPI_R63306_PANEL_SHARP_LS043K3SX04=y
-CONFIG_FB_MSM_MIPI_S6D6AA0_PANEL_AUO_H455TVN01=y
+CONFIG_FB_MSM_MIPI_S6D6AA0_PANEL_SONY_ACX451AKM=y
 CONFIG_FB_MSM_HDMI_MSM_PANEL=y
 CONFIG_FB_MSM_MHL_SII8334=y
 CONFIG_FB_MSM_RECOVER_PANEL=y
@@ -574,14 +574,12 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK_MINORS=32
 # CONFIG_MMC_BLOCK_BOUNCE is not set
 CONFIG_MMC_MSM=y
-CONFIG_MMC_MSM_CARD_HW_DETECTION=y
 CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT=y
 # CONFIG_MMC_MSM_SDC2_SUPPORT is not set
 CONFIG_MMC_MSM_SDC3_SUPPORT=y
 CONFIG_MMC_MSM_SDC3_WP_SUPPORT=y
 CONFIG_MMC_MSM_SPS_SUPPORT=y
-CONFIG_LEDS_AS3677=y
-CONFIG_LEDS_AS3665=y
+CONFIG_LEDS_AS3676=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_SWITCH=y
 CONFIG_RTC_CLASS=y
@@ -608,11 +606,10 @@ CONFIG_MSM_AVTIMER=y
 CONFIG_PFT=y
 CONFIG_MSM_IOMMU=y
 CONFIG_CORESIGHT=y
-CONFIG_CYPRESS_CYTTSP4_BUS=y
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP4=y
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP4_I2C=y
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP4_MT_B=y
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP4_LOADER=y
+CONFIG_RMI4_BUS=y
+CONFIG_RMI4_I2C_ADAPTOR=y
+CONFIG_RMI4_CHAR_DEV=y
+CONFIG_RMI4_WATCHDOG=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_F2FS_FS=y
