TODELETE: deconfig: hayabusa, mint, tsuabasa: Permissive
Change-Id: I50e297f526e0ce3d29280f71957bd6473c44a831

--- a/arch/arm/configs/cm_blue_hayabusa_defconfig
+++ b/arch/arm/configs/cm_blue_hayabusa_defconfig
@@ -3,7 +3,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-cyanogenmod"
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
-CONFIG_TASK_XACCT=y
+CONFIG_TASK_XACCT=yCONFIG_CC_STACKPROTECTOR
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_AUDIT=y
 CONFIG_RCU_FAST_NO_HZ=y
@@ -106,6 +106,8 @@ CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_CC_STACKPROTECTOR=y
+CONFIG_CMDLINE="androidboot.selinux=permissive"
+CONFIG_CMDLINE_EXTEND=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
