--- a/fs/ext4/Kconfig
+++ b/fs/ext4/Kconfig
@@ -84,3 +84,13 @@ config EXT4_DEBUG
 	  If you select Y here, then you will be able to turn on debugging
 	  with a command such as:
 		echo 1 > /sys/module/ext4/parameters/mballoc_debug
+
+config EXT4_COMPATIBILITY_FLAGS
+	bool "EXT4 compatibility flags support"
+	depends on EXT4_FS
+	default n
+	help
+	  Enables optional usage of vfat compatibility flags support for the ext4 filesystem.
+
+	  If you select Y here, then you will be able to use compatibility flags
+	  like uid, gid, fmask, dmask or ignore_case
