--- a/arch/arm/configs/cm_blue_hayabusa_defconfig
+++ b/arch/arm/configs/cm_blue_hayabusa_defconfig
@@ -612,6 +612,7 @@ CONFIG_MSM_IOMMU=y
 CONFIG_CORESIGHT=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_EXT4_COMPATIBILITY_FLAGS=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_FUSE_FS=y
