--- a/arch/arm/configs/cm_blue_tsubasa_defconfig
+++ b/arch/arm/configs/cm_blue_tsubasa_defconfig
@@ -613,6 +613,7 @@ CONFIG_RMI4_CHAR_DEV=y
 CONFIG_RMI4_WATCHDOG=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_EXT4_COMPATIBILITY_FLAGS=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_FUSE_FS=y
