defconfig: blue: Enable CONFIG_EXT4_COMPATIBILITY_FLAGS
 * Meant for the ext4 internal storage used on blue

Change-Id: Ie18e861b8c488b6d10a8d2760eda2ddd57bfb37f

--- a/arch/arm/configs/cm_blue_mint_defconfig
+++ b/arch/arm/configs/cm_blue_mint_defconfig
@@ -613,6 +613,7 @@ CONFIG_RMI4_CHAR_DEV=y
 CONFIG_RMI4_WATCHDOG=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
+CONFIG_EXT4_COMPATIBILITY_FLAGS=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_FUSE_FS=y
